--- a/karta.html
+++ b/karta.html
@@ -61,11 +61,17 @@
       <section class="section">
         <h3>Umiejętności 📉</h3>
         <div class="skill">
-          <a href="mistrzfigur.html"><p>Mistrz figur</p></a>
+          <a href="mistrzfigur.html"
+            ><p><b>Mistrz figur</b></p></a
+          >
+        </div>
+        <div class="skill">
+          <p>Mistrz taktyki</p>
         </div>
         <div class="skill">
           <p>Mistrz strategii</p>
         </div>
+
         <div class="skill">
           <p>Mistrz ocena pozycji</p>
         </div>
@@ -83,9 +89,19 @@
         <form id="skill-form">
           <select id="new-skill">
             <option value="Mistrz końcówek">Mistrz końcówek</option>
+            <option
+              value="Mistrz przewidywania
+            widzenie zagrożeń
+            "
+            >
+              Mistrz przewidywania, widzenie zagrożeń
+            </option>
             <option value="Mistrz obrony">Mistrz motywów</option>
             <option value="Mistrz ataku">Mistrz systematyczności</option>
             <option value="Mistrz gry pozycyjnej">Mistrz emocji</option>
+            <option value=" Mistrz wytrzymywania presji">
+              Mistrz wytrzymywania presji
+            </option>
           </select>
           <button type="submit">Dodaj</button>
         </form>
