--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         text-align: center;
         margin: 0;
         height: 100vh;
+        cursor: pointer;
       }
 
       .content {
@@ -48,6 +49,7 @@
         background-color: #1d1d1e;
         color: #fff;
         border-color: #eba627;
+        transform: scale(1.1);
       }
     </style>
   </head>
