--- a/mapa.html
+++ b/mapa.html
@@ -3,19 +3,72 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Magiczna mapa</title>
-
+    <title>Mapa</title>
     <style>
       body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
         background-image: url("images/mapa.png");
         background-size: cover;
-        background-position: center 30%;
-        background-attachment: fixed;
-        text-align: center;
-        margin: 0;
-        height: 100vh;
+      }
+
+      .tile {
+        position: absolute;
+        width: 80px;
+        height: 80px;
+        background-color: rgba(85, 85, 85, 0.8); /* Przezroczysty szary */
+        transition: background-color 0.3s ease, box-shadow 0.3s ease,
+          transform 0.3s ease;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+      }
+
+      .tile:hover {
+        background-color: rgba(
+          255,
+          204,
+          0,
+          0.8
+        ); /* Zmieniamy kolor na żółty po najechaniu */
+        box-shadow: 0 8px 16px rgba(255, 204, 0, 0.6); /* Dodajemy świecący efekt */
+        transform: scale(1.1); /* Powiększamy kafelek o 10% */
+      }
+
+      /* Pozycje kafelków */
+      .tile-1 {
+        top: 20%;
+        left: 80%;
+      }
+
+      .tile-2 {
+        top: 30%;
+        left: 50%;
+      }
+
+      .tile-3 {
+        top: 50%;
+        left: 30%;
+      }
+
+      .tile-4 {
+        top: 70%;
+        left: 80%;
+      }
+
+      .tile-5 {
+        top: 80%;
+        left: 20%;
       }
     </style>
   </head>
-  <body></body>
+  <body>
+    <div class="tile tile-1"><h2>🔒</h2></div>
+    <div class="tile tile-2"><h2>🔒</h2></div>
+    <div class="tile tile-3"><h2>🔒</h2></div>
+    <div class="tile tile-4"><h2>🔒</h2></div>
+    <div class="tile tile-5"><h2>🔒</h2></div>
+  </body>
 </html>
