--- a/karta.html
+++ b/karta.html
@@ -51,12 +51,14 @@
 
       <section class="section">
         <h3>Bronie 🏹</h3>
-        <p><b>Mat Beniowskiego</b></p>
-        <p><b>Mat pionkiem</b></p>
-        <p><b>Mat rentgenem</b></p>
-        <p><b>Partia Włoska</b></p>
-        <p><b>Obrona Caro-Kann</b></p>
-      </section>
+        <a href="#"
+          ><p><b>Mat Beniowskiego</b></p></a
+        >
+        <a href="#"><p><b>Mat pionkiem</b></p></a>
+          <a href="#"><p><b>Mat rentgenem</b></p></a>
+            <a href="#"><p><b>Partia Włoska</b></p></a>
+              <a href="#"><p><b>Obrona Caro-Kann</b></p></a>
+      </section
 
       <section class="section">
         <h3>Umiejętności 📉</h3>
@@ -66,23 +68,23 @@
           >
         </div>
         <div class="skill">
-          <p>Mistrz taktyki</p>
+          <a href="#"><p>Mistrz taktyki</p></a>
         </div>
         <div class="skill">
-          <p>Mistrz strategii</p>
+          <a href="#"><p>Mistrz strategii</p></a>
         </div>
 
         <div class="skill">
-          <p>Mistrz ocena pozycji</p>
+          <a href="#"><p>Mistrz ocena pozycji</p></a>
         </div>
         <div class="skill">
-          <p>Mistrz wyceny figur</p>
+          <a href="#"><p>Mistrz wyceny figur</p></a>
         </div>
         <div class="skill">
-          <p>Mistrz liczenia kombinacji</p>
+          <a href="#"><p>Mistrz liczenia kombinacji</p></a>
         </div>
         <div class="skill">
-          <p>Mistrz otwarć</p>
+          <a href="#"><p>Mistrz otwarć</p></a>
         </div>
 
         <h3>Dodaj nową umiejętność:</h3>
@@ -90,10 +92,7 @@
           <select id="new-skill">
             <option value="Mistrz końcówek">Mistrz końcówek</option>
             <option
-              value="Mistrz przewidywania
-            widzenie zagrożeń
-            "
-            >
+              value="Mistrz przewidywania widzenie zagrożeń" >
               Mistrz przewidywania, widzenie zagrożeń
             </option>
             <option value="Mistrz obrony">Mistrz motywów</option>
