--- a/mapa.html
+++ b/mapa.html
@@ -62,9 +62,33 @@
         top: 80%;
         left: 20%;
       }
+      .image-container {
+        position: absolute;
+        top: 0;
+        left: 0;
+        text-align: center; /* Wyrównanie napisu do środka */
+        margin: 1%;
+      }
+
+      /* Styl dla obrazka */
+      .top-left-image {
+        width: 200px; /* Szerokość obrazka */
+        height: auto; /* Wysokość dopasowana proporcjonalnie */
+      }
+
+      /* Styl dla napisu */
+      .image-caption {
+        font-size: 20px; /* Rozmiar czcionki napisu */
+        margin-top: 1%; /* Odstęp między obrazkiem a napisem */
+        color: #f4f0f0; /* Kolor tekstu */
+      }
     </style>
   </head>
   <body>
+    <div class="image-container">
+      <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
+      <div class="image-caption">Gandalf</div>
+    </div>
     <div class="tile tile-1"><h2>🔒</h2></div>
     <div class="tile tile-2"><h2>🔒</h2></div>
     <div class="tile tile-3"><h2>🔒</h2></div>
