--- a/karta3.html
+++ b/karta3.html
@@ -263,11 +263,16 @@
 
       <div id="sidebar">
         <h3>Bronie 🏹</h3>
-        <div class="skill"><p>Mat Beniowskiego</p></div>
-        <div class="skill"><p>Mat pionkiem</p></div>
-			<div class="skill"><p>Mat rentgenem</p></div>
-				<div class="skill"><p>Partia Włoska</p></div>
-					<div class="skill"><p>Obrona Caro-Kann</p></div>
+        <div class="skill"><a href="https://lichess.org/training/smotheredMate"
+          ><p>Mat Beniowskiego</p></a></div>
+        <div class="skill"><a href="#"
+          ><p>Mat pionkiem</p></a></div>
+			<div class="skill"><a href="https://lichess.org/training/xRayAttack"
+        ><p>Mat rentgenem</p></a></div>
+				<div class="skill"><a href="https://lichess.org/training/Italian_Game"
+          ><p>Partia Włoska</p></a></div>
+					<div class="skill"><a href="https://lichess.org/training/Caro-Kann_Defense"
+            ><p>Obrona Caro-Kann</p></a></div>
         <h3>Umiejętności 📉</h3>
         <div class="skill">
           <a href="mistrzfigur.html"
