--- a/karta3.html
+++ b/karta3.html
@@ -363,8 +363,14 @@
       <div id="footer">
         <h3>Podnoszenie poziomu broni 🧩</h3>
         <ul id="abilities">
-          <li><span>⛏️ Mat Beniowskiego</span>: <span>1/2</span></li>
-          <li><span>👁 Obrona Caro-Kann</span>: <span>3/3</span></li>
+          <div class="skill"><a href="https://lichess.org/training/Caro-Kann_Defense"
+            ><p>Obrona Caro-Kann</p></a></div>
+            <div class="skill"><a href="https://lichess.org/training/Italian_Game"
+              ><p>Partia Włoska</p></a></div>
+              <div class="skill"><a href="https://lichess.org/training/xRayAttack"
+                ><p>Mat rentgenem</p></a></div>
+                <div class="skill"><a href="https://lichess.org/training/smotheredMate"
+                  ><p>Mat Beniowskiego</p></a></div>
         </ul>
       </div>
       <div id="footer">
