--- a/karta3.html
+++ b/karta3.html
@@ -361,7 +361,7 @@
         <a href="mapa.html"><h3>Mapa 🗺️</h3></a>
       </div>
       <div id="footer">
-        <h3>Podnoszenie poziomu broni ↗️</h3>
+        <h3>Podnoszenie poziomu broni </h3>
         
           <div class="skill"><a href="https://lichess.org/training/Caro-Kann_Defense"
             ><p> Obrona Caro-Kann  ↗️70/100</p></a></div>
