--- a/karta3.html
+++ b/karta3.html
@@ -265,7 +265,7 @@
         <h3>Bronie 🏹</h3>
         <div class="skill"><a href="https://lichess.org/training/smotheredMate"
           ><p>Mat Beniowskiego🗡️🗡️🗡️</p></a></div>
-        <div class="skill"><a href="#"
+        <div class="skill"><a href="api.html"
           ><p>Mat pionkiem🗡️</p></a></div>
 			<div class="skill"><a href="https://lichess.org/training/xRayAttack"
         ><p>Mat rentgenem🗡️</p></a></div>
