--- a/mag.html
+++ b/mag.html
@@ -14,9 +14,10 @@
           <h2>Jan Kowalski</h2>
           <p>
             Kategoria szachowa IV |
-            <a href="ranking.html">Ranking 12/30 🏆 </a> |
+            <a href="historia .html">Historia</a> |
+            <a href="ranking.html">Ranking 12/30🏆</a> |
             <a href="https://ratings.fide.com/profile/41848705"
-              >Ranking FIDE ♟️</a
+              >Ranking FIDE♟️</a
             >
           </p>
         </div>
