--- a/api.html
+++ b/api.html
@@ -36,7 +36,7 @@
 
     <script>
       async function fetchMyPublicGames() {
-        const username = "Garuda1987";
+        const username = "uczenjan1";
         const url = `https://lichess.org/api/games/user/${username}?max=5&format=json`;
 
         try {
