--- a/mapa.html
+++ b/mapa.html
@@ -82,6 +82,9 @@
         margin-top: 1%; /* Odstęp między obrazkiem a napisem */
         color: #f4f0f0; /* Kolor tekstu */
       }
+      a {
+        text-decoration: none;
+      }
     </style>
   </head>
   <body>
@@ -89,7 +92,9 @@
       <img src="images/jas2.png" alt="Obrazek w rogu" class="top-left-image" />
       <div class="image-caption">Gandalf</div>
     </div>
-    <div class="tile tile-1"><h2>🔒</h2></div>
+    <div class="tile tile-1">
+      <h2><a href="ranking.html">🔒</a></h2>
+    </div>
     <div class="tile tile-2"><h2>🔒</h2></div>
     <div class="tile tile-3"><h2>🔒</h2></div>
     <div class="tile tile-4"><h2>🔒</h2></div>
