--- a/zamek.html
+++ b/zamek.html
@@ -6,13 +6,10 @@
     <title>Mapa</title>
     <style>
       body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background-image: url("images/mapa.png");
-        background-size: cover;
+    
+  background-image: url("images/zamek.png");
+  background-size: cover;
+  background-position: center; /* Wyśrodkowanie tła */
       }
 
       .tile {
@@ -98,7 +95,7 @@
     </div>
     <div class="tile tile-2"><h2>🔒</h2></div>
     <div class="tile tile-3"><h2>🔒</h2></div>
-    <div class="tile tile-4"><a href="zamek.html"><h3>🔒Zamek Caro-Kann</h3></a></div>
+    <div class="tile tile-4"><a href="ranking.html"><h2>🔒</h2></a></div>
     <div class="tile tile-5"><h2>🔒</h2></div>
   </body>
 </html>
