--- a/wybor.html
+++ b/wybor.html
@@ -73,7 +73,7 @@
         <a href="karta3.html">
           <img src="images/jas2.png" alt="Obrazek 1" />
         </a>
-        <div class="card-name">Stara</div>
+        <div class="card-name">Aktywna</div>
       </div>
 
       <!-- Obrazek 2 -->
@@ -81,7 +81,7 @@
         <a href="karta4.html">
           <img src="images/jas2.png" alt="Obrazek 2" />
         </a>
-        <div class="card-name">Nowsza wersja</div>
+        <div class="card-name">Statyczna</div>
       </div>
     </div>
   </body>
