--- a/karta3.html
+++ b/karta3.html
@@ -373,14 +373,13 @@
         <h3><p>Podnoszenie poziomu broni </h3>
         
           <a href="https://lichess.org/training/Caro-Kann_Defense"
-            ><p> Obrona Caro-Kann  ↗️70/100</p></a><span class="hover-text">Podejmiesz wyzwanie?⚔️</span>
+            ><p> Obrona Caro-Kann  ↗️70/100</p></a>
           <a href="https://lichess.org/training/Italian_Game"
-              ><p> Partia Włoska  ↗️40/100</p></a><span class="hover-text">Jesteś odważny</span>
+              ><p> Partia Włoska  ↗️40/100</p></a>
              <a href="https://lichess.org/training/xRayAttack"
-                ><p> Mat Rentgenem ↗️80/100 </p></a><span class="hover-text">Podejmiesz wyzwanie?⚔️</span>
+                ><p> Mat Rentgenem ↗️80/100 </p></a>
                 <a href="mat.html"
-                  ><p> Mat Beniowskiego ↗️↙80/100</p></a><span class="hover-text">Podejmiesz wyzwanie?⚔️</span>
-  
+                  ><p> Mat Beniowskiego ↗️↙80/100</p></a>
       </div>
       <div id="footer">
         <h3>Odznaki 🏅</h3>
