--- a/karta3.html
+++ b/karta3.html
@@ -282,6 +282,16 @@
           ><p>Partia Włoska🗡️🗡️🗡️</p></a></div>
 					<div class="skill"><a href="https://lichess.org/training/Caro-Kann_Defense"
             ><p>Obrona Caro-Kann🗡️🗡️🗡️</p></a></div>
+
+            <h3><p>Maty </h3>
+        
+              <a href="mat.html"
+                ><p> Ostateczny cios</p></a>
+              <a href="mat.html"
+                  ><p> Pchnięcie śmierci</p></a>
+                 
+                    <a href="mat.html"
+                      ><p>  Kończące uderzenie</p></a>
         <h3>Umiejętności 📉</h3>
         <div class="skill">
           <a href="mistrzfigur.html"
