--- a/karta4.html
+++ b/karta4.html
@@ -218,10 +218,38 @@
 
       <div id="sidebar">
         <h3>Bronie</h3>
-        🏹🏹🏹🏹🏹🏹🏹🏹🏹
+        <div class="skill">
+          <p>Mat Beniowskiego🗡️🗡️🗡️</p>
+        </div>
+        <div class="skill">
+          <p>Partia Włoska🗡️🗡️🗡️</p>
+        </div>
+        <div class="skill">
+          <p>Obrona Caro-Kann🗡️🗡️🗡️</p>
+        </div>
+
+        <h3>Maty</h3>
+        <div class="skill">
+          <p>Ostateczny cios</p>
+        </div>
+        <div class="skill">
+          <p>Kończące uderzenie</p>
+        </div>
+        <div class="skill">
+          <p>Pchnięcie śmierci</p>
+        </div>
 
         <h3>Umiejętności</h3>
-        🗡️🗡️🗡️🗡️🗡️🗡️🗡️🗡️
+        <div class="skill">
+          <p>Mistrz taktyki</p>
+        </div>
+        <div class="skill">
+          <p>Mistrz strategii</p>
+        </div>
+
+        <div class="skill">
+          <p>Mistrz ocena pozycji</p>
+        </div>
       </div>
 
       <div id="content">
@@ -235,7 +263,26 @@
       </div>
 
       <div id="footer">
-        <h3><p>Podnoszenie poziomu broni</p></h3>
+        <h3>Dodaj nową umiejętność:</h3>
+        <form id="skill-form">
+          <select id="new-skill">
+            <option value="Mistrz końcówek">Mistrz końcówek</option>
+            <option
+              value="Mistrz przewidywania
+            widzenie zagrożeń
+            "
+            >
+              Mistrz przewidywania, widzenie zagrożeń
+            </option>
+            <option value="Mistrz obrony">Mistrz motywów</option>
+            <option value="Mistrz ataku">Mistrz systematyczności</option>
+            <option value="Mistrz gry pozycyjnej">Mistrz emocji</option>
+            <option value=" Mistrz wytrzymywania presji">
+              Mistrz wytrzymywania presji
+            </option>
+          </select>
+          <button type="submit">Dodaj</button>
+        </form>
       </div>
     </div>
   </body>
