--- a/mat.html
+++ b/mat.html
@@ -108,21 +108,21 @@
       <div class="container">
         <h1>Rozwiąż zadania</h1>
         <div class="button-container">
-          <a href="https://lichess.org/training/smotheredMate"
-            ><button class="button">Zadnie 1</button></a
+          <a href="https://lichess.org/training/mateIn1"
+            ><button class="button">Mat w 1</button></a
           >
-          <a href="https://lichess.org/training/knightEndgame"
-            ><button class="button">Zadnie 2</button></a
+          <a href="https://lichess.org/training/mateIn2"
+            ><button class="button">Mat w 2</button></a
           >
           <a href="https://lichess.org/training/mateIn3"
-            ><button class="button">Zadnie 3</button></a
+            ><button class="button">Mat w 3</button></a
           >
         </div>
       </div>
 
       <div class="info-container">
-        <h2>Poziom 81↗️</h2>
-        <p>Mat Beniowskiego 🏆</p>
+        <h2>↗️</h2>
+        <p>Kończące uderzenie 🏆</p>
       </div>
     </div>
   </body>
