--- a/karta4.html
+++ b/karta4.html
@@ -217,7 +217,7 @@
       </div>
 
       <div id="sidebar">
-        <h3>Bronie</h3>
+        <a href="karta3.html"><h3>Bronie</h3></a>
         <div class="skill">
           <p>Mat Beniowskiego🗡️🗡️🗡️</p>
         </div>
@@ -228,7 +228,7 @@
           <p>Obrona Caro-Kann🗡️🗡️🗡️</p>
         </div>
 
-        <h3>Maty</h3>
+        <a href="karta3.html"><h3>Maty</h3></a>
         <div class="skill">
           <p>Ostateczny cios</p>
         </div>
@@ -239,7 +239,7 @@
           <p>Pchnięcie śmierci</p>
         </div>
 
-        <h3>Umiejętności</h3>
+        <a href="karta3.html"><h3>Umiejętności</h3></a>
         <div class="skill">
           <p>Mistrz taktyki</p>
         </div>
