--- a/karta4.html
+++ b/karta4.html
@@ -253,6 +253,8 @@
       </div>
 
       <div id="content">
+        <a href="karta3.html">Zmień postać</a>
+
         <div class="carousel">
           <div class="carousel-images">
             <div class="carousel-image">
