--- a/karta4.html
+++ b/karta4.html
@@ -171,6 +171,34 @@
         margin-left: 20%;
         height: auto;
       }
+      .tooltip {
+        position: relative;
+        display: inline-block;
+        cursor: pointer;
+      }
+
+      .tooltip .tooltiptext {
+        visibility: hidden;
+        width: 50px; /* Zmieniona szerokość dymka */
+        background-color: rgba(0, 0, 0, 0.7);
+        color: #fff;
+        text-align: center;
+        border-radius: 5px;
+        padding: 1px; /* Zwiększony padding (odstępy wewnętrzne dymka) */
+        position: absolute;
+        z-index: 1;
+        top: 25%; /* Ustawienie dymka poniżej tekstu */
+        left: 110%;
+
+        opacity: 0;
+        transition: opacity 0.3s;
+        font-size: 10px; /* Zmieniony rozmiar tekstu w dymku */
+      }
+
+      .tooltip:hover .tooltiptext {
+        visibility: visible;
+        opacity: 1;
+      }
     </style>
   </head>
 
@@ -217,7 +245,10 @@
       </div>
 
       <div id="sidebar">
-        <a href="karta3.html"><h3>Bronie</h3></a>
+        <div class="tooltip">
+          <a href="karta3.html"><h3>Bronie</h3></a>
+          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        </div>
         <div class="skill">
           <p>Mat Beniowskiego🗡️🗡️🗡️</p>
         </div>
