--- a/mat.html
+++ b/mat.html
@@ -117,12 +117,18 @@
           <a href="https://lichess.org/training/mateIn3"
             ><button class="button">Mat w 3</button></a
           >
+          <a href="https://lichess.org/training/mateIn4"
+            ><button class="button">Mat w 4</button></a
+          >
+          <a href="https://lichess.org/training/mateIn5"
+            ><button class="button">Mat w 5</button></a
+          >
         </div>
       </div>
 
       <div class="info-container">
-        <h2>↗️</h2>
-        <p>Kończące uderzenie 🏆</p>
+        <h2>🏆</h2>
+        <p>Kończące uderzenie</p>
       </div>
     </div>
   </body>
