--- a/jezioro.html
+++ b/jezioro.html
@@ -6,13 +6,10 @@
     <title>Mapa</title>
     <style>
       body {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 100vh;
-        margin: 0;
-        background-image: url("images/mapa.png");
-        background-size: cover;
+          
+  background-image: url("images/jezioro.png");
+  background-size: cover;
+  background-position: center; /* Wyśrodkowanie tła */
       }
 
       .tile {
@@ -96,9 +93,9 @@
     <div class="tile tile-1">
       <h2>🔒</h2></a>
     </div>
-    <div class="tile tile-2"><h2>🔒</h2></div>
-    <div class="tile tile-3"><a href="jezioro.html"><h3>🔒Włoskie jezioro</h3></a></div>
-    <div class="tile tile-4"><a href="zamek.html"><h3>🔒Zamek Caro-Kann</h3></a></div>
-    <div class="tile tile-5"><h2>🔒</h2></div>
+    <div class="tile tile-2"><a href="https://lichess.org/study/D0s4rxGY/M8PZbyPD"><h3>Kontratak traxlera</h3></a></div>
+    <div class="tile tile-3"><a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"><h3> Klasyczny wariant</h3></a></div>
+    <div class="tile tile-4"><a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"><h3>Smarzona Wątróbka</h3></a></div>
+    <div class="tile tile-5"><a href="https://lichess.org/study/N7FznfeZ/v298r0f9"><h3>Jerome'a gambit</h3></a></div>
   </body>
 </html>
