--- a/karta3.html
+++ b/karta3.html
@@ -261,7 +261,7 @@
       <div id="topbar">
         <div id="topbarL">
           <a href="mapa.html"
-            >Mapa<img src="images/mapa.png" width="100" height="100"
+            ><img src="images/mapa.png" width="100" height="100"
           /></a>
         </div>
         <div id="topbarR">
