--- a/karta4.html
+++ b/karta4.html
@@ -65,14 +65,13 @@
         font-size: 18px;
         color: #ffffff;
         opacity: 0.9;
-        border-right: 2px dotted #666666;
       }
 
       #content {
         float: left;
-        padding: 30px;
+        padding: 20px;
         opacity: 0.8;
-        width: 527px;
+        width: 570px;
         background-color: #504e4e;
         color: #ffffff;
         text-align: justify;
@@ -167,7 +166,7 @@
 
       .carousel img {
         opacity: 0.9;
-        width: 45%;
+        width: 55%;
         margin-left: 20%;
         height: auto;
       }
@@ -221,9 +220,12 @@
 
     <div id="topbar">
       <div id="topbarL">
-        <a href="mapa.html"
-          >Mapa<img src="images/mapa.png" width="100" height="100"
-        /></a>
+        <div class="tooltip">
+          <a href="mapa.html"
+            ><img src="images/mapa.png" width="100" height="100"
+          /></a>
+          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        </div>
       </div>
       <div id="topbarR">
         <span class="bigtitle">Odznaki 🏅</span>
@@ -259,7 +261,10 @@
           <p>Obrona Caro-Kann🗡️🗡️🗡️</p>
         </div>
 
-        <a href="karta3.html"><h3>Maty</h3></a>
+        <div class="tooltip">
+          <a href="karta3.html"><h3>Maty</h3></a>
+          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        </div>
         <div class="skill">
           <p>Ostateczny cios</p>
         </div>
@@ -270,7 +275,10 @@
           <p>Pchnięcie śmierci</p>
         </div>
 
-        <a href="karta3.html"><h3>Umiejętności</h3></a>
+        <div class="tooltip">
+          <a href="karta3.html"><h3>Umiejętności</h3></a>
+          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        </div>
         <div class="skill">
           <p>Mistrz taktyki</p>
         </div>
@@ -296,26 +304,10 @@
       </div>
 
       <div id="footer">
-        <h3>Dodaj nową umiejętność:</h3>
-        <form id="skill-form">
-          <select id="new-skill">
-            <option value="Mistrz końcówek">Mistrz końcówek</option>
-            <option
-              value="Mistrz przewidywania
-            widzenie zagrożeń
-            "
-            >
-              Mistrz przewidywania, widzenie zagrożeń
-            </option>
-            <option value="Mistrz obrony">Mistrz motywów</option>
-            <option value="Mistrz ataku">Mistrz systematyczności</option>
-            <option value="Mistrz gry pozycyjnej">Mistrz emocji</option>
-            <option value=" Mistrz wytrzymywania presji">
-              Mistrz wytrzymywania presji
-            </option>
-          </select>
-          <button type="submit">Dodaj</button>
-        </form>
+        <div class="tooltip">
+          <a href="karta3.html"><h3>Dodaj nową umiejętność</h3></a>
+          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        </div>
       </div>
     </div>
   </body>
