--- a/karta4.html
+++ b/karta4.html
@@ -211,9 +211,21 @@
         <div style="height: 30px"></div>
 
         Kategoria IV |
-        <a href="ranking.html">Ranking 12/30🏆 </a> |
-        <a href="https://lichess.org/login">Lichess🔗</a> |
-        <a href="https://ratings.fide.com/profile/41848705">Ranking FIDE♟️</a>
+
+        <div class="tooltip">
+          <a href="ranking.html">Ranking 12/30🏆</a>
+          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        </div>
+        |
+        <div class="tooltip">
+          <a href="https://lichess.org/login">Lichess🔗</a>
+          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        </div>
+        |
+        <div class="tooltip">
+          <a href="https://ratings.fide.com/profile/41848705">Ranking FIDE♟️</a>
+          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        </div>
       </div>
       <div style="clear: both"></div>
     </div>
