--- a/jezioro.html
+++ b/jezioro.html
@@ -93,7 +93,7 @@
     <div class="tile tile-1">
       <h2>🔒</h2></a>
     </div>
-    <div class="tile tile-2"><a href="https://lichess.org/study/D0s4rxGY/M8PZbyPD"><h3>Kontratak traxlera</h3></a></div>
+    <div class="tile tile-2"><a href="https://lichess.org/study/D0s4rxGY/M8PZbyPD"><h3>Kontratak Traxlera</h3></a></div>
     <div class="tile tile-3"><a href="https://lichess.org/study/D0s4rxGY/DKYuTsoe"><h3> Klasyczny wariant</h3></a></div>
     <div class="tile tile-4"><a href="https://lichess.org/study/D0s4rxGY/SuicxJaI"><h3>Smarzona Wątróbka</h3></a></div>
     <div class="tile tile-5"><a href="https://lichess.org/study/N7FznfeZ/v298r0f9"><h3>Jerome'a gambit</h3></a></div>
