--- a/karta4.html
+++ b/karta4.html
@@ -259,9 +259,9 @@
       </div>
 
       <div id="sidebar">
-        <div class="tooltip">
-          <a href="karta3.html"><h3>Bronie</h3></a>
-          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+        <div>
+          <h3>Bronie</h3>
+          <a href="karta3.html">Zmień</a>
         </div>
         <div class="skill">
           <p>Mat Beniowskiego🗡️🗡️🗡️</p>
@@ -274,22 +274,11 @@
         </div>
 
         <div class="tooltip">
-          <a href="karta3.html"><h3>Maty</h3></a>
+          <a href="karta3.html"><h3>Umiejętności</h3></a>
           <span class="tooltiptext"><h5>Pzejdź!</h5></span>
         </div>
         <div class="skill">
           <p>Ostateczny cios</p>
-        </div>
-        <div class="skill">
-          <p>Kończące uderzenie</p>
-        </div>
-        <div class="skill">
-          <p>Pchnięcie śmierci</p>
-        </div>
-
-        <div class="tooltip">
-          <a href="karta3.html"><h3>Umiejętności</h3></a>
-          <span class="tooltiptext"><h5>Pzejdź!</h5></span>
         </div>
         <div class="skill">
           <p>Mistrz taktyki</p>
