--- a/karta4.html
+++ b/karta4.html
@@ -260,7 +260,7 @@
 
       <div id="sidebar">
         <h3>Bronie</h3>
-        <a href="karta3.html">Zmień</a>
+        <a href="karta3.html"><h5>Zmień</h5></a>
 
         <div class="skill">
           <p>Mat Beniowskiego🗡️🗡️🗡️</p>
