--- a/karta4.html
+++ b/karta4.html
@@ -213,14 +213,12 @@
         background-color: rgba(0, 0, 0, 0.6);
         color: #f1f1f1;
         border: 2px solid #f1f1f1;
-
         transition: all 0.3s ease;
       }
 
       button:hover {
         background-color: #1d1d1e;
         color: #fff;
-
         transform: scale(1.1);
       }
     </style>
@@ -265,7 +263,7 @@
         </div>
       </div>
       <div id="topbarR">
-        <span class="bigtitle">Odznaki 🏅</span>
+        Odznaki 🏅
         <div style="height: 30px"></div>
         ⚔️ Włoski atak 🎭 Łapanie oszustów 🎯 Pchnięcie środka
         <div style="clear: both"></div>
