--- a/karta3.html
+++ b/karta3.html
@@ -31,9 +31,9 @@
         color: white;
         padding: 10px;
         opacity: 0.9;
-        margin-top: 20px;
+        margin-top: 15px;
         margin-bottom: 15px;
-        height: 150px;
+        height: 120px;
         width: 890px;
         margin-left: auto;
         margin-right: auto;
@@ -41,7 +41,7 @@
 
       #topbarL {
         float: left;
-        padding: 20px;
+        padding: 10px;
         width: 138px;
         opacity: 0.9;
         text-align: center;
@@ -50,7 +50,7 @@
 
       #topbarR {
         float: left;
-        padding: 20px;
+        padding: 10px;
         opacity: 0.9;
         width: 660px;
         font-size: 20px;
@@ -265,7 +265,7 @@
           /></a>
         </div>
         <div id="topbarR">
-          <span class="bigtitle">Odznaki 🏅</span>
+         Odznaki 🏅
           <div style="height: 30px"></div>
           ⚔️ Włoski atak 🎭 Łapanie oszustów 🎯 Pchnięcie środka
           <div style="clear: both"></div>
