--- a/karta5.html
+++ b/karta5.html
@@ -279,7 +279,12 @@
       
     </div>
 
-    
+    <div id="footer">
+      <div class="tooltip">
+        <a href="karta3.html"><h3>Twoje misje</h3></a>
+        <span class="tooltiptext"><h5>Pzejdź!</h5></span>
+      </div>
+    </div>
 
 </div>
   </body>
