--- a/karta3.html
+++ b/karta3.html
@@ -250,9 +250,9 @@
           
             Kategoria IV |
             <a href="ranking.html">Ranking 12/30🏆 </a> |
-            <a href="https://lichess.org/login">Lichess🔗</a> |
+            <a href="https://lichess.org/login" target="_blank">Lichess🔗</a> |
             <a href="https://ratings.fide.com/profile/41848705"
-              >Ranking FIDE♟️</a>
+            target="_blank" >Ranking FIDE♟️</a>
         
         </div>
         <div style="clear: both"></div>
