--- a/karta5.html
+++ b/karta5.html
@@ -195,12 +195,12 @@
         </div>
         |
         <div class="tooltip">
-          <a href="https://lichess.org/login">Lichess🔗</a>
+          <a href="https://lichess.org/login" target="_blank" >Lichess🔗</a>
           <span class="tooltiptext"><h5>Pzejdź!</h5></span>
         </div>
         |
         <div class="tooltip">
-          <a href="https://ratings.fide.com/profile/41848705">Ranking FIDE♟️</a>
+          <a href="https://ratings.fide.com/profile/41848705" target="_blank">Ranking FIDE♟️</a>
           <span class="tooltiptext"><h5>Pzejdź!</h5></span>
         </div>
       </div>
