--- a/mag.html
+++ b/mag.html
@@ -15,8 +15,8 @@
           <p>
             Kategoria szachowa IV |
             <a href="historia .html">Historia</a> |
-            <a href="ranking.html">Ranking 12/30🏆</a> |
-            <a href="https://ratings.fide.com/profile/41848705"
+            <a href="ranking.html" target="_blank">Ranking 12/30🏆</a> |
+            <a href="https://ratings.fide.com/profile/41848705" target="_blank"
               >Ranking FIDE♟️</a
             >
           </p>
